<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AclubUser</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="register_facebook">Register by Facebook</string>
    <string name="register_title">Register</string>
    <string name="register_title_later">Register later</string>
    <string name="register_email_title">Register email</string>

    <string-array name="countries_array">
        <item>Viet Nam</item>
        <!-- <item>England</item> -->
    </string-array>

    <string name="confirm_register_title">Confirm</string>
    <string name="privacy_policy_register">For using Aclub, you have to verify your account by your number phone or Facebook account. After agreement with our</string>
    <string name="agree_term_con">Term and Conditions</string>
    <string name="and">and</string>
    <string name="security_policy">Security Policy</string>
    <string name="go_next">, press Confirm</string>
    <string name="error_register_infor_message">Please completely enter out this form</string>
    <string name="ok_aclub_label">Ok</string>
    <string name="cancel_aclub_label">Cancel</string>
    <string name="send_sms_register_noti">We will send the verify number to this number via SMS</string>
    <string name="send_otp_pass_noti">Please input the verify password which was received via SMS. If you did not receive this password, please try to.</string>
    <string name="send_otp_pass_again"><u>Send OTP pass again</u></string>
    <string name="email_hint">EMAIL</string>
    <string name="password_hint">PASSWORD</string>
    <string name="login_action_bar_title">Login</string>
    <string name="forgot_pass"><u>Forgot Password?</u></string>
    <string name="facebook_app_id">866048466813979</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="not_yet_register_email">Email was not registered</string>
    <string name="full_name">Full Name</string>
    <string name="update_profile_guide">Please input name and avatar for helping other friend find you. Other Aclub user can view the name and avatar of you. The below setting will use your number phone and your contact address. Please click to this setting to view the details of settings </string>
    <string name="add_friend_automatic">Add friend automatically</string>
    <string name="allow_more_friend">Allow more friend</string>
    <string name="error_num_register_before">This number was registered before</string>
    <string name="error_title">Error</string>
    <string name="put_num_login">Please put your number to login</string>
    <string name="number_phone">Number phone</string>
    <string name="login_by_email">Login by Email</string>
    <string name="login_title">Login</string>
    <string name="register_email_action_bar_title">Email register</string>
    <string name="password_email_register_guide">The password has 6 ~ 20 characters.\n You can backup your information when changing device or phone number.\n Email password also will be used when signing ID phone number. </string>
    <string name="email_verify">Email verify token</string>
    <string name="email_verify_question">You did not received your token?</string>
    <string name="email_verify_sl1">1. Check your email address</string>
    <string name="email_verify_sl2">2. Check your email recybin</string>
    <string name="email_verify_sl3">3. Try others below solutions</string>
    <string name="email_verify_resent"><u>Resend Token</u></string>
    <string name="email_verify_send_email"><u>Send email</u></string>
    <string name="email_verify_resent_success">We re-sent to your email, please check it again</string>
    <string name="otp_verify_resent_success">We re-sent an SMS, please check it again</string>
    <string name="email_verify_resent_error">Something error</string>
    <string name="take_foto">Take Photo</string>
    <string name="from_library">Choose from Library</string>
    <string name="select_file">Select File</string>
    <string name="add_foto">Add Photo</string>
    <string name="forgot_email_password">Forgot Email Password</string>
    <string name="login_facebook_success">Login Facebook successfully</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="main_title_sale_every_day">Update the hot sale every day</string>
    <string name="new_pro_title_sale_every_day">Giảm 20% trong tháng 8, tháng 9 cho thành viên Aclub</string>
    <string name="confirm_now_lable">Confirm</string>
    <string name="hot_sale_item_title">Mỳ hoành thánh, 4 phần dành cho gia đình</string>
    <string name="most_active_member_block_title">Most active members</string>
    <string name="new_member_block_title">New members</string>
    <string name="like_location_block_title">Suggestion locations</string>
    <string name="news_block_title">News</string>
    <string name="drawer_search_edt_hint">Search</string>
    <string name="drawer_item_one">Home</string>
    <string name="drawer_item_two">Voucher box</string>
    <string name="drawer_item_three">Daily Events</string>
    <string name="drawer_item_four">Check in</string>
    <string name="drawer_item_five">News feed</string>
    <string name="drawer_item_six">Rewards</string>
    <string name="drawer_item_sevend">Brands</string>
    <string name="drawer_item_eight">Friends</string>
    <string name="drawer_item_night">My Profile</string>
    <string name="drawer_item_ten">Settings</string>
    <string name="drawer_title_add_friend">+ Add Friends</string>

    <!-- Search Fragment String -->
    <string name="search_label">Search</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_book_label">Book</string>
    <string name="search_item_call_btn_label">Call</string>
    <string name="search_item_sale_btn_label">Hot Sale</string>
    <string name="search_item_discuss_btn_label">Discuss</string>
    <string name="search_item_share_btn_label">Share</string>
    <string name="search_item_email_btn_label">Email</string>

    <!-- Voucher Fragment String -->
    <string name="search_by_city">Search by city</string>
    <string name="voucher_total_result_label">Co 20 khuyen mai dang duoc phat hanh gan vi tri ban. Hay tham gia ngay cung chung toi !!!</string>
    <string name="voucher_book_lable">Book now</string>
    <string name="voucher_booked_lable">Booked</string>

    <!-- Logout function -->
    <string name="logout_label">Logout</string>
    <string name="logout_question">Do you really want to exist A Club?</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>

    <string-array name="nav_items">
        <item>Menu 1st</item>
        <item>Menu 2nd</item>
        <item>Share</item>
        <item>Rate</item>
        <item>More Apps</item>
        <item>About</item>
    </string-array>

</resources>