<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/action_bar_email_verify_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_alignParentTop="true"
        layout="@layout/action_bar_layout" >
    </include>

    <EditText
        android:id="@+id/email_verify_edt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar_email_verify_layout"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/spinner_country_martin_top"
        android:hint="@string/email_verify"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/email_user_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_verify_edt"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:text="dinostudio8891@gmail.com"
        android:textColor="@color/action_bar_background"
        android:textSize="@dimen/email_verify_text_size" />

    <TextView
        android:id="@+id/email_verify_question"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_user_tv"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:text="@string/email_verify_question"
        android:textColor="@android:color/black"
        android:textSize="@dimen/email_verify_text_size" />

    <TextView
        android:id="@+id/email_verify_sol1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_verify_question"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:text="@string/email_verify_sl1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/email_verify_text_size" />

    <TextView
        android:id="@+id/email_verify_sol2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_verify_sol1"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:text="@string/email_verify_sl2"
        android:textColor="@android:color/black"
        android:textSize="@dimen/email_verify_text_size" />

    <TextView
        android:id="@+id/email_verify_sol3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_verify_sol2"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:text="@string/email_verify_sl3"
        android:textColor="@android:color/black"
        android:textSize="@dimen/email_verify_text_size" />

    <TextView
        android:id="@+id/email_verify_resent_token_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/email_verify_sol3"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/email_verify_resent_token_martin_top"
        android:text="@string/email_verify_resent"
        android:textColor="@android:color/black"
        android:textSize="@dimen/email_verify_text_size" />

    <TextView
        android:id="@+id/email_verify_send_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/email_verify_sol3"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/email_verify_resent_token_martin_top"
        android:text="@string/email_verify_send_email"
        android:textColor="@android:color/black"
        android:textSize="@dimen/email_verify_text_size" />

    <Button
        android:id="@+id/email_verify_later_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/register_default_martin_top"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:background="@color/login_background_color"
        android:text="@string/register_title_later"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/email_verify_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/email_verify_later_btn"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:background="@color/login_background_color"
        android:text="@string/confirm_register_title"
        android:textColor="@android:color/white" />

</RelativeLayout>