<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daimajia.slider.demo.MainActivity" >

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_btn"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_login_default_height"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:background="@color/action_bar_background"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        facebook:com_facebook_confirm_logout="true"
        facebook:com_facebook_tooltip_mode="never_display" />

    <LinearLayout
        android:id="@+id/login_register_linearlayout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/register_button_height"
        android:layout_above="@id/facebook_login_btn"
        android:background="@android:color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/login_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/login_textview_size" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/login_view_martin_top_bottom"
            android:layout_marginTop="@dimen/login_view_martin_top_bottom"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/register_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/login_textview_size" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/login_register_linearlayout" >

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            custom:auto_cycle="true"
            custom:indicator_visibility="visible"
            custom:pager_animation="Accordion"
            custom:pager_animation_span="1100" />

        <TextView
            android:id="@+id/title_hot_sale_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_vertical"
            android:layout_marginLeft="@dimen/spinner_country_martin_left"
            android:layout_marginRight="@dimen/spinner_country_martin_left"
            android:layout_marginTop="@dimen/main_title_martin_top"
            android:gravity="center"
            android:text="@string/main_title_sale_every_day"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_title_text_size" />
    </FrameLayout>

    <com.daimajia.slider.library.Indicators.PagerIndicator
        android:id="@+id/custom_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_indiactor_martin_top"
        android:gravity="center|center_vertical"
        custom:selected_color="@android:color/white"
        custom:selected_height="9dp"
        custom:selected_padding_left="5dp"
        custom:selected_padding_right="5dp"
        custom:selected_width="9dp"
        custom:shape="oval"
        custom:unselected_color="#DDDDDD"
        custom:unselected_height="9dp"
        custom:unselected_padding_left="5dp"
        custom:unselected_padding_right="5dp"
        custom:unselected_width="9dp" />

</RelativeLayout>